--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+body {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 400;
+}
+
 :root {
     --container-val: 1701px;
     --footer-color: #F0F6FE;
