STYLE: more css variables

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,4 +9,7 @@ body {
     --container-val: 1701px;
     --footer-color: #F0F6FE;
     --text-primary-color: #81899D;
+    --title-color: #0C5BEF;
+    --text-color: #222327;
+    --type-color: #00133A;
 }
